feat: add stylying with styled-components

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+}
+
+:root {
+  /* Topgraphy */
+  --family: Roboto, sans-serif;
+  --fs-sm: 14px;
+  --fs-md: 16px;
+  --fw-regular: 400;
+  --fw-bold: 700;
+
+  /* Colors */
+  --colors-text: #fefefe;
+  --colors-bg: #1e1e1e;
+  --colors-ui-accent: #0075ff;
+  --colors-ui-base: #2b2d2e;
+
+  /* Other */
+  --radius: 0.2rem;
+  --shadow: rgba(245, 245, 245, 0.2) 0 0 8px;
+}
+
+body {
+  margin: 0;
+  font-family: var(--family);
+  background: var(--colors-bg);
+  color: var(--colors-text);
+  font-weight: var(--fw-regular);
+}
+
 .row-buttons {
   display: flex;
 }
